# lexpredict-lexnlp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEPENDENCY_MODERNIZATION_PLAN.md  MAINTENANCE_RECOMMENDATIONS.md  MANIFEST.in  MIGRATION_RUNBOOK.md  MODERNIZATION_ROADMAP.md  Pipfile  README.md  README.rst  TY_CHECK_TODO.md  arthrod-GLiNER-pr37-comments (2).md  arthrod-lexpredict-lexnlp-pr11-comments.md  arthrod-lexpredict-lexnlp-pr13-comments (1).md  arthrod-lexpredict-lexnlp-pr14-comments.md  arthrod-lexpredict-lexnlp-pr16-comments (1).md  arthrod-lexpredict-lexnlp-pr19-comments.md  arthrod-lexpredict-lexnlp-pr21-comments.md  arthrod-lexpredict-lexnlp-pr22-comments.md  arthrod-lexpredict-lexnlp-pr23-comments.md  arthrod-lexpredict-lexnlp-pr9-comments.md  conftest.py  imp.py  index.rst  notes.md  pyproject.toml  python-requirements-dev.txt  python-requirements-full.txt  python-requirements.txt  setup.py
.github/workflows/: asset-drift.yml  ci.yml  publish-contract-model.yml  publish-contract-type-runtime-model.yml
ci/: check_dist_contents.py  skip_audit.py  skip_audit_allowlist.txt
documentation/docs/source/: conf.py
lexnlp/: __init__.py
lexnlp/compat/: __init__.py  sklearn_patch.py  unittest_patch.py
lexnlp/config/: stanford.py
lexnlp/config/en/: company_types.py
lexnlp/config/pt/: pt_courts.csv  pt_regulations.csv
lexnlp/extract/all_locales/: amounts.py  citations.py  copyrights.py  court_citations.py  courts.py  dates.py  definitions.py  durations.py  geoentities.py  languages.py  money.py  percents.py
lexnlp/extract/batch/: __init__.py  async_extract.py  fuzzy_dates.py  fuzzy_patterns.py  pandas_output.py  parallel_rng.py  progress.py
lexnlp/extract/common/: base_path.py  countries.py  dates.py  dates_classifier_model.py  fact_extracting.py  geoentity_detector.py  language_dictionary_reader.py  money_detector.py  pattern_found.py  special_characters.py  text_beautifier.py  text_pattern_collector.py  universal_court_parser.py  us_states.py  year_parser.py
lexnlp/extract/de/: amounts.py  citations.py  copyrights.py  court_citations.py  courts.py  date_model.pickle  date_model.py  date_model.skops  dates.py  dates_de_classifier.py  de_date_parser.py  definitions.py  durations.py  geoentities.py  identifiers.py  language_tokens.py  laws.py  model.pickle  model.skops  money.py  percents.py
lexnlp/extract/en/: acts.py  amounts.py  citation_variations.py  citations.py  conditions.py  constraints.py  copyright.py  courts.py  cusip.py  date_model.pickle  date_model.py  date_model.skops  date_validation.py  dates.py  definition_parsing_methods.py  definitions.py  dict_entities.py  distances.py  durations.py  en_language_tokens.py  geoentities.py  introductory_words_detector.py  money.py  percents.py  pii.py  ratios.py  regulations.py  trademarks.py  urls.py  utils.py
lexnlp/extract/es/: copyrights.py  courts.py  dates.py  definitions.py  identifiers.py  language_tokens.py  regulations.py
lexnlp/extract/ml/: environment.py
lexnlp/extract/ner/: __init__.py
lexnlp/extract/pt/: __init__.py  amounts.py  citations.py  copyrights.py  courts.py  dates.py  definitions.py  distances.py  durations.py  identifiers.py  language_tokens.py  money.py  percents.py  pii.py  ratios.py  regulations.py  trademarks.py  urls.py
lexnlp/ml/: gensim_utils.py  model_card.py  model_io.py  normalizers.py  predictor.py  sklearn_config.py  sklearn_transformers.py  vectorizers.py
lexnlp/ml/catalog/: __init__.py  download.py  hub.py
lexnlp/ml/tests/: test_download_retry.py  test_model_card.py  test_model_io.py  test_sklearn_config.py
lexnlp/nlp/en/: stanford.py  tokens.py
lexnlp/nlp/train/: train_data_manager.py
lexnlp/tests/: dictionary_comparer.py  lexnlp_tests.py  typed_annotations_tests.py  upload_benchmarks.py  utility_for_testing.py
lexnlp/tests/tests/: test_lexnlp_tests.py  test_models_repo.py  test_upload_benchmarks.py
lexnlp/utils/: amount_delimiting.py  caching.py  cosine.py  decorators.py  iterating_helpers.py  map.py  pandas_config.py  parse_df.py  pos_adjustments.py  text_vectors.py  unpickler.py
lexnlp/utils/lines_processing/: line_processor.py  parsed_text_corrector.py  parsed_text_quality_estimator.py  phrase_finder.py
lexnlp/utils/tests/: test_amount_delimiting.py  test_caching.py  test_cosine.py  test_decorators_import_order.py  test_iterating_helpers.py  test_line_processor.py  test_map.py  test_pandas_config.py  test_pandas_config_read_csv.py  test_parse_df.py  test_parse_df_variadic.py  test_parsed_text_corrector.py  test_parsed_text_quality_estimator.py  test_phrase_finder.py  test_text_vectors.py
lexnlp/utils/unicode/: unicode_lookup.py
notebooks/classification/contract-type-classifier/: 0_download_corpora.ipynb  1_preprocess_training_data.ipynb  2_train_gensim_doc2vec_model.ipynb  3_train_sklearn_is_contract_classifier.ipynb
notebooks/classification/is-contract-classifier/: 0_download_corpora.ipynb  1_preprocess_training_data.ipynb  2_train_gensim_doc2vec_model.ipynb  3_train_sklearn_is_contract_classifier.ipynb
notebooks/embeddings/10k/: build_word2vec_model.ipynb  build_word2vec_model_spacy.ipynb  build_word2vec_model_spacy.py  test_w2v.ipynb
notebooks/embeddings/contracts/: build_doc2vec_model_all.py  build_word2vec_model.ipynb  build_word2vec_model_all.py  build_word2vec_model_articles.py  build_word2vec_model_credit.py  build_word2vec_model_employment.py  build_word2vec_model_leases.py  build_word2vec_model_operating.py  (+2 more)
scripts/: asset_drift_check.py  bootstrap_assets.py  contract_type_quality_gate.py  create_release_branch.sh  model_quality_gate.py  reexport_bundled_sklearn_models.py  reexport_contract_model.py  train_contract_model.py  train_contract_type_model.py  unify_py_file_structure.py
scripts/tests/: __init__.py  test_asset_drift_check.py  test_bootstrap_assets.py  test_contract_type_quality_gate.py  test_reexport_bundled_sklearn_models.py  test_train_contract_type_model.py
test_data/model_quality/: contract_type_baseline_metrics.json  is_contract_baseline_metrics.json  release_asset_manifest.json
(+284 files in other folders)
