[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lexnlp"
version = "2.3.0"
description = "LexPredict LexNLP"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.13,<3.15"
license = "AGPL-3.0-or-later"
authors = [
  { name = "ContraxSuite, LLC", email = "support@contraxsuite.com" }
]
keywords = [
  "legal",
  "contract",
  "document analytics",
  "nlp",
  "ml",
  "machine learning",
  "natural language"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Legal Industry",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Office/Business",
  "Topic :: Text Processing :: Linguistic",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
  "beautifulsoup4>=4.12",
  "cloudpickle>=3.0",
  "dateparser>=1.2",
  "elasticsearch>=8.15",
  "gensim>=4.3.3",
  "joblib>=1.4",
  "lxml>=5.3",
  "nltk>=3.9",
  "num2words>=0.5.13",
  "numpy>=1.26,<3",
  "pandas>=2.2.0,<3",
  "psutil>=6",
  "pycountry>=23",
  "python-dateutil>=2.9",
  "regex>=2024.0",
  "reporters-db>=3.2.61",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "scipy>=1.11.0",
  "skops>=0.11",
  "tqdm>=4.67",
  "Unidecode>=1.4",
  "us>=2.0.2",
  "zahlwort2num>=0.4.3"
]

[project.optional-dependencies]
stanford = []
tika = ["tika>=2.6.0"]

# PEP 735 dependency groups (uv/pip install --group). Keep the
# runtime-only extras above so ``pip install lexnlp[tika]`` still
# works for downstream consumers.
[dependency-groups]
test = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.6.0",
]
dev = [
  {include-group = "test"},
  "build>=1.2.2",
  "memory-profiler>=0.61.0",
  "pylint>=3.3.0",
  "sphinx>=7.4.0",
  "twine>=5.1.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
lexnlp = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["*tests*"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.pytest.ini_options]
markers = [
  "serial: sequential-only tests"
]