# Modern uv-native build backend (``uv_build``). Produces standards-compliant
# sdists and wheels without requiring setuptools/wheel in the build
# environment, and is resolved through ``uv build`` in CI. The backend is
# owned by Astral (same vendor as ``uv`` and ``ruff``) so the toolchain
# stays consistent.
[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[project]
name = "lexnlp"
version = "2.3.0"
description = "LexPredict LexNLP"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.13,<3.15"
license = "AGPL-3.0-or-later"
authors = [
  { name = "ContraxSuite, LLC", email = "support@contraxsuite.com" }
]
keywords = [
  "legal",
  "contract",
  "document analytics",
  "nlp",
  "ml",
  "machine learning",
  "natural language"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Legal Industry",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Topic :: Office/Business",
  "Topic :: Text Processing :: Linguistic",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = [
  "beautifulsoup4>=4.12",
  "cloudpickle>=3.0",
  "dateparser>=1.2",
  "elasticsearch>=8.15",
  "gensim>=4.3.3",
  "joblib>=1.4",
  "lxml>=5.3",
  "nltk>=3.9",
  "num2words>=0.5.13",
  "numpy>=2.1,<3",
  "pandas>=2.2.0,<3",
  "psutil>=6",
  "pycountry>=23",
  "python-dateutil>=2.9",
  "regex>=2024.0",
  "reporters-db>=3.2.61",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "scipy>=1.11.0",
  "skops>=0.11",
  "tqdm>=4.67",
  "Unidecode>=1.4",
  "us>=2.0.2",
  "zahlwort2num>=0.4.3"
]

[project.optional-dependencies]
stanford = []
tika = ["tika>=2.6.0"]

# PEP 735 dependency groups (uv/pip install --group). Keep the
# runtime-only extras above so ``pip install lexnlp[tika]`` still
# works for downstream consumers.
[dependency-groups]
test = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "pytest-xdist>=3.6.0",
]
lint = [
  "ruff>=0.15.0",
  "ty>=0.0.1a5",
]
dev = [
  {include-group = "test"},
  {include-group = "lint"},
  "build>=1.2.2",
  "memory-profiler>=0.61.0",
  "pylint>=3.3.0",
  "sphinx>=7.4.0",
  "twine>=5.1.1",
]

# uv_build uses the PEP 621 ``[project]`` table plus this dedicated
# section for wheel-specific layout.
#
# * ``module-root = ""`` tells the backend the package lives at the repo
#   root (i.e. ``lexnlp/`` is a sibling of ``pyproject.toml``).
# * ``module-name`` explicitly names the single top-level package so
#   tests and sibling packages are not bundled.
# * ``source-include`` / ``source-exclude`` control what ships in the
#   sdist; notebooks and test data are excluded on purpose.
[tool.uv.build-backend]
module-root = ""
module-name = "lexnlp"
source-include = ["lexnlp/py.typed"]
source-exclude = [
  "notebooks/**",
  "test_data/**",
  "**/tests/**",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = [
  "libs",
  "notebooks",
  "test_data",
]

[tool.ruff.lint]
# Enable a focused set of rules. The full ``E``/``W``/``F`` default set catches
# obvious bugs; ``I`` enforces import ordering; ``UP`` drives the PEP 585/604
# modernization we are completing; ``B``/``RUF``/``SIM`` surface idiomatic
# improvements. The explicit ignore list documents intentional deviations.
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "W",     # pycodestyle warnings
  "I",     # import order (isort)
  "UP",    # pyupgrade (PEP 585/604, f-strings)
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "RUF",   # ruff-specific (RUF012, RUF013, etc.)
  "SIM",   # flake8-simplify (hand-picked by ruff)
]
ignore = [
  "E501",  # line length is enforced by formatter instead
  "B008",  # many locale parsers accept mutable defaults intentionally
  "SIM108",  # ternary expansion often hurts readability in parsers
  "UP007",  # keep both Optional and | None forms readable in stubs
]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.py" = ["E402", "F401", "I001"]
"lexnlp/**/tests/**/*.py" = ["B011"]
"scripts/tests/**/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["lexnlp"]

[tool.ty]
# ``ty`` (astral's fast type checker) is wired as the project type checker to
# satisfy the "Python type checking must be configured" policy. The settings
# below match our Python floor and keep the check advisory rather than strict
# until the legacy ``Any`` hotspots are cleaned up.
environment = { python-version = "3.13" }

[tool.ty.src]
exclude = [
  "libs/**",
  "notebooks/**",
  "test_data/**",
  "**/tests/**",
]

[tool.ty.rules]
# Match the PEP 604 modernization already shipped: keep implicit-Optional as
# an error because it was the headline PR review finding.
implicit-optional = "error"
# Generator signatures are still mixed; keep as warn while we migrate the
# tail of Generator[T] annotations to Iterator[T].
invalid-type-form = "warn"

[tool.pytest.ini_options]
markers = [
  "serial: sequential-only tests",
  "integration: tests that require external assets or network",
]
addopts = "-ra --strict-markers"